; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqcomm.c_pq_getbyte_if_available.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqcomm.c_pq_getbyte_if_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PqCommReadingMsg = common dso_local global i32 0, align 4
@PqRecvPointer = common dso_local global i64 0, align 8
@PqRecvLength = common dso_local global i64 0, align 8
@PqRecvBuffer = common dso_local global i8* null, align 8
@MyProcPort = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8
@EWOULDBLOCK = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@COMMERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"could not receive data from client: %m\00", align 1
@EOF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pq_getbyte_if_available(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* @PqCommReadingMsg, align 4
  %6 = call i32 @Assert(i32 %5)
  %7 = load i64, i64* @PqRecvPointer, align 8
  %8 = load i64, i64* @PqRecvLength, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load i8*, i8** @PqRecvBuffer, align 8
  %12 = load i64, i64* @PqRecvPointer, align 8
  %13 = add nsw i64 %12, 1
  store i64 %13, i64* @PqRecvPointer, align 8
  %14 = getelementptr inbounds i8, i8* %11, i64 %12
  %15 = load i8, i8* %14, align 1
  %16 = load i8*, i8** %3, align 8
  store i8 %15, i8* %16, align 1
  store i32 1, i32* %2, align 4
  br label %52

17:                                               ; preds = %1
  %18 = call i32 @socket_set_nonblocking(i32 1)
  %19 = load i32, i32* @MyProcPort, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @secure_read(i32 %19, i8* %20, i32 1)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %44

24:                                               ; preds = %17
  %25 = load i64, i64* @errno, align 8
  %26 = load i64, i64* @EAGAIN, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %36, label %28

28:                                               ; preds = %24
  %29 = load i64, i64* @errno, align 8
  %30 = load i64, i64* @EWOULDBLOCK, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %36, label %32

32:                                               ; preds = %28
  %33 = load i64, i64* @errno, align 8
  %34 = load i64, i64* @EINTR, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32, %28, %24
  store i32 0, i32* %4, align 4
  br label %43

37:                                               ; preds = %32
  %38 = load i32, i32* @COMMERROR, align 4
  %39 = call i32 (...) @errcode_for_socket_access()
  %40 = call i32 @errmsg(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %41 = call i32 @ereport(i32 %38, i32 %40)
  %42 = load i32, i32* @EOF, align 4
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %37, %36
  br label %50

44:                                               ; preds = %17
  %45 = load i32, i32* %4, align 4
  %46 = icmp eq i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %44
  %48 = load i32, i32* @EOF, align 4
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %47, %44
  br label %50

50:                                               ; preds = %49, %43
  %51 = load i32, i32* %4, align 4
  store i32 %51, i32* %2, align 4
  br label %52

52:                                               ; preds = %50, %10
  %53 = load i32, i32* %2, align 4
  ret i32 %53
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @socket_set_nonblocking(i32) #1

declare dso_local i32 @secure_read(i32, i8*, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode_for_socket_access(...) #1

declare dso_local i32 @errmsg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
